--- a/index.html
+++ b/index.html
@@ -1,114 +1,69 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>JohnCena | 个人导航页</title>
+		<meta name="keywords" content="JohnCena,主页,博客,JC小站">
+        <link rel="shortcut icon" href="logo/favicon.ico">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="css/main.css" />
+		<noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
+	</head>
+	<body> 
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-    <title>JohnCena | 个人导航页</title>
-    <meta name="description">
-    <meta name="keywords" content="JohnCena,主页,博客,JC小站">
-    <link rel="stylesheet" type="text/css" href="./css/FiraCode.css">
-    <link rel="stylesheet" type="text/css" href="./css/nutssss.css">
-    <link rel="icon" href="./favicon.ico">
-</head>
+				<!-- Header -->
+					<header id="header">
+						<div class="logo"></div>
+						<div class="content">
+							<div class="inner">
+								<h3>John.Cena</h3>
+								<p>平平无奇的大三学生</p>
+								<p>代码书写人生</p>
+							</div>
+						</div>
+						<nav>
+							<ul>
+								<li><a href="https://jcxiaozhan.gitee.io" target="_blank">Blog</a></li><!-- 按钮1-->
+								<li><a href="https://blog.csdn.net/weixin_50741825?type=lately" target="_blank">CSDN</a></li><!-- 按钮2-->
+								<li><a href="https://github.com/jcxiaozhan0403" target="_blank">github</a></li><!-- 按钮3-->
+								<li><a href="https://gitee.com/jcxiaozhan" target="_blank">gitee</a></li><!-- 按钮4-->
+								<li><a href="http://wpa.qq.com/msgrd?v=3&uin=349636607&site=qq&menu=yes" target="_blank">qq</a></li><!-- 按钮4-->
+								<li><a href="mailto:349636607@qq.com">Email</a></li><!-- 按钮4-->
+							</ul>
+						</nav>
+					</header>
 
-<body>
-    <div id="box">
-        <!-- 个人资料卡片 -->
-        <div class="meBox">
-            <!-- 头像 -->
-            <div class="headPhoto"></div>
-            <!-- 介绍 -->
-            <div class="meBox-title">
-                <p>I'm JohnCena</p>
-                <div class="fg"></div>
-            </div>
-            <div class="meBox-text">
-                <p>平平无奇大二学生</p>
-                <br>
-                <p>爱好乒乓球<img src="./img/005.png" style="width: 20px; vertical-align: middle;">，计算机<img src="./img/006.png" style="width: 20px; vertical-align: middle;"></p>
-                <br>
-                <p>写代码是一种热爱</p>
-            </div>
-            <!-- 两个按钮 -->
-            <div class="meBox-Button">
-                <a href="https://jcxiaozhan.gitee.io/about/">关于</a>
-                <a href="http://wpa.qq.com/msgrd?v=3&amp;uin=349636607&amp;site=qq&amp;menu=yes">联系</a>
-            </div>
-        </div>
+				<!-- Footer -->
+					<footer id="footer">
+						<p class="copyright">©2021 <a href="https://jcxiaozhan.gitee.io" target="_blank" >JC小站</a> 版权所有</p>
 
-        <!-- 伪终端介绍 -->
-        <div id="cmdBox">
-            <!-- 第一个终端 -->
-            <div class="cmd">
-                <!-- 三个按钮 -->
-                <div class="click">
-                    <div class="red"></div>
-                    <div class="yellow"></div>
-                    <div class="green"></div>
-                </div>
-                <!-- 顶部标题 -->
-                <div class="title">
-                    <span>home - bash</span>
-                </div>
-                <!-- 终端内文字 -->
-                <div class="cmdText">
-                    <span style="color: rgb(0, 190, 0);">root@JohnCena</span>
-                    <span style="color: blue;">~</span>
-                    <span style="color: rgb(39, 39, 39);">./tianqi.sh</span>
-                    <br />
-                    <iframe scrolling="no" src="https://tianqiapi.com/api.php?style=tc&skin=pitaya" frameborder="0"
-                        width="350" height="24" allowtransparency="true"></iframe>
-                    <br />
-                    <span style="color: rgb(0, 190, 0);">root@JohnCena</span>
-                    <span style="color: blue;">~</span>
-                    <span style="color: rgb(39, 39, 39);">cat /me.txt</span>
-                    <p>爱好计算机，会去自学自己感兴趣的一切东西</p>
-                    <p>略懂HTML,JavaScript；喜欢折腾；写代码是种热爱</p>
-                    <p>这条路我也才刚刚迈开了我的第一步</p>
-                    <p>我知道，这条道路一定充满坎坷</p>
-                    <p>所以我想说</p>
-                    <p>不要因为走得远了，而忘记我们为何出发</p>
-                    <span style="color: rgb(0, 190, 0);">root@JohnCena</span>
-                    <span style="color: blue;">~</span>
-                    <span style="color: rgb(39, 39, 39);">sudo rm -rf /过去的自己/*</span>
-                </div>
-            </div>
-            <!-- 第二个终端 -->
-            <div class="cmd cmd2">
-                <!-- 三个按钮 -->
-                <div class="click">
-                    <div class="red"></div>
-                    <div class="yellow"></div>
-                    <div class="green"></div>
-                </div>
-                <!-- 顶部标题 -->
-                <div class="title">
-                    <span>home - bash</span>
-                </div>
-                <!-- 终端内文字 -->
-                <div class="cmdText">
-                    <span style="color: rgb(0, 190, 0);">root@JohnCena</span>
-                    <span style="color: blue;">~</span>
-                    <span style="color: rgb(39, 39, 39);">./links.sh</span>
-                    <p>我的站点：</p>
-                    <ul class="ul">
-                        <li><a href="https://jcxiaozhan.gitee.io/" target="_blank">JC小站</a></li>
-                        <li><a href="http://jc.euuw.cn/" target="_blank">JC代刷网</a></li>
-                    </ul>
-                    <span style="color: rgb(0, 190, 0);">root@JohnCena</span>
-                    <span style="color: blue;">~</span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- 页脚 -->
-    <div id="footer">
-        <p>© 2020 JohnCena | <a href="http://beian.miit.gov.cn">蜀ICP备20003280号-1</a></p>
-        <p>THEME MADE BY <a href="https://jcxiaozhan.gitee.io/navigation.html">JohnCena</a></p>
-    </div>
-</body>
+					</footer>
 
+			</div>
+
+		<!-- BG -->
+			<div id="bg"></div>
+
+		<!-- Scripts -->
+			<script src="js/jquery.min.js" ></script>
+			<script src="js/skel.min.js" ></script>
+			<script src="js/util.js" ></script>
+			<script src="js/main.js" ></script>
+            <script src="js/su.js"></script>
+            <script type="text/javascript">jQuery(document).ready(function($){
+               $('body').wpSuperSnow({
+    flakes: ['images/007.png', 'images/006.png', 'images/004.png', 'images/002.png', 'images/001.png', 'images/003.png', 'images/002.png', 'images/001.png', ],
+    totalFlakes: '90',
+    zIndex: '999999',
+    maxSize: '30',
+    maxDuration: '20',
+    useFlakeTrans: false
+});
+});
+</script>
+	<audio id="mom" src="music/01.mp3" autoplay="autoplay" loop="-1" preload="auto" type="audio/mp3"></audio>
+	</body>
 </html>
