--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<script src="js/jquery.min.js" ></script>
 			<script src="js/skel.min.js" ></script>
 			<script src="js/util.js" ></script>
-			<script src="js/main.js" ></script>
+			<script src="js/mymain.js" ></script>
             <script src="js/su.js"></script>
             <script type="text/javascript">jQuery(document).ready(function($){
                $('body').wpSuperSnow({
@@ -64,6 +64,5 @@
 });
 });
 </script>
-	<audio id="mom" src="music/01.mp3" autoplay="autoplay" loop="-1" preload="auto" type="audio/mp3"></audio>
 	</body>
 </html>
