--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<div class="inner">
 								<h3>John.Cena</h3>
 								<p>平平无奇的大三学生</p>
-								<p>代码书写人生</p>
+								<p>热爱编程的摆烂人</p>
 							</div>
 						</div>
 						<nav>
