--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 		<link rel="stylesheet" href="css/main.css" />
 		<noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
 	</head>
+	<style>
+		a#recordInfo {
+			font-size: 15px;
+			color: #ccc;
+			font-family: cursive;
+		}
+
+		a#recordInfo:hover {
+			color:#00BFFF;
+			text-decoration:underline;
+		}
+	</style>
 	<script>
 		window.onload = init;
 
@@ -50,6 +62,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<p class="copyright"><span id="nowYear"></span><a href="https://jcxiaozhan.gitee.io" target="_blank" >JC小站</a> 版权所有</p>
+						<a id="recordInfo" href="http://beian.miit.gov.cn/" target="_blank"><center>蜀ICP备20003280号-1</center></a>
 					</footer>
 
 			</div>
